--- a/src/content/tags.njk
+++ b/src/content/tags.njk
@@ -8,17 +8,15 @@ permalink: /tags/{{ tag | slug }}/
 ---
 
 <main>
-  <article>
-    <h1>Tag: {{ tag }}</h1>
-
-    <ul>
-      {%- for post in collections[tag] -%}
-      <li class="post-item">
-        <div>
-          <a href="{{ post.url }}">{{ post.data.title }}</a>
-        </div>
-      </li>
-      {%- endfor -%}
-    </ul>
-  </article>
+  <h1>Tag: {{ tag }}</h1>
+  <hr class="span" />
+  <ul>
+    {%- for post in collections[tag] -%}
+    <li class="post-item">
+      <div>
+        <a href="{{ post.url }}">{{ post.data.title }}</a>
+      </div>
+    </li>
+    {%- endfor -%}
+  </ul>
 </main>
